--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,103 @@
+  <section id="home">
+    <div class="jumbotron text-center">
+      <h1>PIQUE</h1>
+      <h4>A space where people connect to build projects they care about</h4>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-4 col-sm-offset-1 text-center">
+          <h2>I want to work on a project</h2>
+          <button class="btn btn-default">GET STARTED</button>
+        </div>
+
+        <div class="col-xs-12 col-sm-4 col-sm-offset-2 text-center">
+          <h2>I have an idea + want to build it!</h2>
+          <button class="btn btn-default">GET STARTED</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="section-1">
+    <div class="container">
+      <div class="row text-center">
+        <h5>Question 1 of 4</h5>
+        <h2>What is your role?</h2>
+        <div class="col-xs-4 col-sm-4 question">
+          <h4>Option</h4>
+          <h5>Here is an option.</h5>
+        </div>
+        <div class="col-xs-4 col-sm-4 question">
+          <h4>Option</h4>
+          <h5>Here is an option.</h5>
+        </div>
+        <div class="col-xs-4 col-sm-4 question">
+          <h4>Option</h4>
+          <h5>Here is an option.</h5>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="section-2">
+    <div class="container">
+      <div class="row text-center">
+        <h5>Question 2 of 4</h5>
+        <h2>What platform do you use?</h2>
+        <div class="col-xs-4 col-sm-4 question">
+          <h4>Option</h4>
+          <h5>Here is an option.</h5>
+        </div>
+        <div class="col-xs-4 col-sm-4 question">
+          <h4>Option</h4>
+          <h5>Here is an option.</h5>
+        </div>
+        <div class="col-xs-4 col-sm-4 question">
+          <h4>Option</h4>
+          <h5>Here is an option.</h5>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <section id="section-3">
+    <div class="container">
+      <div class="row text-center">
+        <h5>Question 3 of 4</h5>
+        <h2>What size buisness do you run?</h2>
+        <div class="col-xs-4 col-sm-4 question">
+          <h4>Option</h4>
+          <h5>Here is an option.</h5>
+        </div>
+        <div class="col-xs-4 col-sm-4 question">
+          <h4>Option</h4>
+          <h5>Here is an option.</h5>
+        </div>
+        <div class="col-xs-4 col-sm-4 question">
+          <h4>Option</h4>
+          <h5>Here is an option.</h5>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="jumbotron">
+    <div class="row">
+      <div class="col-xs-4 col-xs-offset-2 col-sm-6  col-sm-offset-2">
+        <h5>Pique</h5>
+        <h5>Other stuff</h5>
+        <h5>Better other stuff</h5>
+      </div>
+      <div class="col-xs-4 col-sm-4">
+        <h5>Pique</h5>
+        <h5>Other stuff</h5>
+        <h5>Better other stuff</h5>
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-12 text-center">
+      <p>Copyright 2015 © Pique | All Rights Reserved</p>
+    </div>
+  </div>
 <%= link_to "Sign in with Linkedin", user_omniauth_authorize_path(:linkedin) %>
