--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<!-- <p class="notice"><#%= notice %></p>
+<p class="alert"><#%= alert %></p> -->
 <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
