--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
           <li><a href="/users/edit">Edit Profile</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Logout</a></li>
+          <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
         </ul>
         <% else %>
         <ul class="nav navbar-nav navbar-right">
