updates index links

--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -1,3 +1,8 @@
-<%= user.user_name %> has <%= friendships.count %> friends.
+<%#= user.user_name %> has <%#= friendships.count %> friends.
 
-<%= %>
+<%#= %>
+
+<br/>
+<a href="/mumbles/new"><h2>new mumble</h2></a>
+
+
