gets friendship counter working for users

--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -1,9 +1,9 @@
 <% @friends.each do |friend| %>
-  <%= @friend.id %> has <%= @friends.count %> friends.
+  <%= friend.id %> has <%= @friends.count %>.</br>
 
 <% end %>
 
-<%= @friend.id %>
+<%#= friend.id %>
 
 <!-- <br/>
 <a href="/mumbles/new"><h2>new mumble</h2></a> -->
