updates button routes for friend count

--- a/app/views/friendships/show.html.erb
+++ b/app/views/friendships/show.html.erb
@@ -1,1 +1,3 @@
 <%= @user.name %> has <%= @friends.count %> friends.
+<%= button_to("Add to Friends")%>
+<%#= , friend_path(friend), method: "update")  link_to(@user.name, user_path(user)) %>
