updates friendship show routes/paths

--- a/app/views/friendships/show.html.erb
+++ b/app/views/friendships/show.html.erb
@@ -1,3 +1,8 @@
 <%= @user.name %> has <%= @friends.count %> friends.
-<%= button_to("Add to Friends")%>
-<%#= , friend_path(friend), method: "update")  link_to(@user.name, user_path(user)) %>
+
+<%= button_to "Add to Friends"%>
+
+<!-- link_to(@user.name, user_path(user)) -->
+
+<!-- , friend
+, method: "get"  -->
